# spyder-ai-assistant

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: chat-workflows.md  release-workflow.md  runtime-inspection.md  settings-configuration.md  validation-workflow.md
docs/api-reference/: ollama-api.md  pyqt5-patterns.md  spyder-plugin-api.md
src/spyder_ai_assistant/: __init__.py  completion_provider.py  plugin.py
src/spyder_ai_assistant/backend/: __init__.py  chat_providers.py  client.py  worker.py
src/spyder_ai_assistant/utils/: chat_exchanges.py  chat_inference.py  chat_persistence.py  chat_themes.py  chat_workflows.py  code_apply.py  completion_context.py  context.py  logging.py  prompt_library.py  provider_profiles.py  runtime_bridge.py  runtime_context.py
src/spyder_ai_assistant/widgets/: assistant_settings_dialog.py  chat_display.py  chat_settings_dialog.py  chat_widget.py  code_apply_dialog.py  config_page.py  exchange_delete_dialog.py  ghost_text.py  provider_profiles_dialog.py  session_history_dialog.py  status.py
src/spyder_ai_chat/: __init__.py  completion_provider.py  plugin.py
src/spyder_ai_chat/backend/: client.py  worker.py
src/spyder_ai_chat/utils/: __init__.py  context.py
src/spyder_ai_chat/widgets/: __init__.py  chat_display.py  chat_input.py  chat_widget.py  ghost_text.py
tests/: conftest.py  test_chat_display_scroll.py  test_chat_exchanges.py  test_chat_inference.py  test_chat_persistence.py  test_chat_providers.py  test_chat_widget.py  test_chat_worker.py  test_chat_workflows.py  test_code_apply.py  test_completion_context.py  test_completion_provider.py  test_ghost_text.py  test_markdown_rendering.py  test_prompt_library.py  test_provider_profiles.py  test_runtime_bridge.py  test_runtime_context.py
tools/release/: __init__.py  build_dist.py
tools/spyder_validation/: __init__.py  common.py  run_chat_exchange_deletion_restore_validation.py  run_chat_exchange_deletion_validation.py  run_chat_history_browser_restore_validation.py  run_chat_history_browser_validation.py  run_chat_inference_controls_restore_validation.py  run_chat_inference_controls_validation.py  run_chat_persistence_setup.py  run_chat_persistence_verify.py  run_chat_prompt_preset_restore_validation.py  run_chat_prompt_preset_validation.py  run_chat_provider_validation.py  run_chat_use_console_smoke.py  run_chat_workflow_validation.py  run_completion_validation.py  run_phase10_runtime_validation.py  run_phase11_apply_preview_validation.py  run_phase12_provider_profiles_validation.py  run_phase13_history_discovery_validation.py
tools/visual_tests/: test_markdown_rendering.py  test_scroll_behavior.py
