[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spyder-ai-chat"
version = "0.1.0"
description = "AI chat and code completion plugin for Spyder IDE using local Ollama models"
readme = "README.md"
license = {text = "CC-BY-NC-4.0"}
requires-python = ">=3.11"
authors = [
    {name = "Andrea Ivan Costantino"},
]
keywords = [
    "Spyder",
    "Plugin",
    "AI",
    "Ollama",
    "LLM",
    "Code Completion",
    "Chat",
    "Copilot",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
]
dependencies = [
    "spyder>=6.0.0",
    "ollama>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-qt",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/andreaivancostantino/spyder-ai-chat"
Repository = "https://github.com/andreaivancostantino/spyder-ai-chat"
Issues = "https://github.com/andreaivancostantino/spyder-ai-chat/issues"

# Register the dockable chat panel plugin with Spyder.
[project.entry-points."spyder.plugins"]
ai_chat = "spyder_ai_chat.plugin:AIChatPlugin"

# Register the AI completion provider with Spyder's completion system.
# This is separate from the chat plugin — it handles inline code completions
# via Ollama's FIM API and shows up in Completion and Linting preferences.
[project.entry-points."spyder.completions"]
ai_chat = "spyder_ai_chat.completion_provider:AIChatCompletionProvider"

[tool.setuptools.packages.find]
where = ["src"]
